--- a/index.html
+++ b/index.html
@@ -67,39 +67,57 @@
 
       <div class="intro-info">
         <h2 class="" style="font-size: 25px;">SEED<span style="font-weight: 400">CODE</h2>
-        <h2 class="">The All-Encompassing Solution For Your Software Development</h2>
-        <p class="">Build your startup — get equity financing for your software development, recruit a team overseas,
-          and
-          build a product, service, & experience
-          customers love.</p>
-        <div class="">
-          <a href="mailto:rabeel@seedcode.io" class=" scrollto get-started">
-            <span>Get Started</span>
-            <i class="fa fa-envelope fa-lg"></i>
+        <h2 class="">Software For Innovators By Innovators</h2>
+        <p class="">We build secure, scalable software products that enable financial inclusivity and improve lives</p>
+        <div class="main-buttons">
+
+          <button class="btn ph-btn" type="button" data-toggle="modal" data-target="#introModal">
+            See What We Built
+            <i class="fas fa-play-circle fa-lg"></i>
+          </button>
+
+          <a href="mailto:rabeel@seedcode.io" class=" btn get-started">
+            Let's Discuss Your Project
+            <i class="far fa-comments fa-lg"></i>
           </a>
-          <a href="#portfolio" class="btn-main scrollto">Portfolio</a>
+        </div>
+
+      </div>
+  </section><!-- #intro -->
+  <div class="modal fade" id="introModal" tabindex="-1" role="dialog" aria-labelledby="introModalLabel"
+    aria-hidden="true">
+    <div id="intro-modal-dialog" class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="embed-responsive embed-responsive-16by9 p-5">
+            <video id="intro-vid" width="320" height="240" controls>
+              <source src="video/VIDEO-2020-01-02-18-35-45.mp4" class="embed-responsive-item auto" type="video/mp4">
+            </video>
+          </div>
         </div>
       </div>
-
     </div>
-  </section><!-- #intro -->
+  </div>
 
   <main id="main">
-
-    <div class="container-fluid collab">
-      <h6 class="collab-header wow fadeIn">In Collaboration With</h6>
-      <div class="row">
-        <div class="col-lg-3 col-6 wow fadeIn">
-          <img src="img/collab/collab-3.jpg" class="img-fluid mb-4 img-pad-1">
-        </div>
-        <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.1s">
-          <img src="img/collab/collab-1.jpg" class="img-fluid mb-4 img-pad-2">
-        </div>
-        <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.2s">
-          <img src="img/collab/collab-4.jpg" class="img-fluid mb-4 img-pad-1">
-        </div>
-        <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.3s">
-          <img src="img/collab/collab-2.jpg" class="img-fluid mb-4 img-pad-1">
+    <div class="collab">
+      <div class="container ">
+        <header class="collab-header wow fadeIn">
+          <h3>Great Partners Make Us Better</h3>
+        </header>
+        <div class="row">
+          <div class="col-lg-3 col-6 wow fadeIn">
+            <img src="img/collab/samba.PNG" class="img-fluid mb-4 img-pad-1">
+          </div>
+          <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.1s">
+            <img src="img/collab/telenor.PNG" class="img-fluid mb-4 img-pad-2">
+          </div>
+          <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.2s">
+            <img src="img/collab/nbp.PNG" class="img-fluid mb-4 img-pad-1">
+          </div>
+          <div class="col-lg-3 col-6 wow fadeIn" data-wow-delay="0.3s">
+            <img src="img/collab/collab-2.jpg" class="img-fluid mb-4 img-pad-1">
+          </div>
         </div>
       </div>
     </div>
@@ -147,25 +165,6 @@
             <img src="img/about-img.jpg" class="img-fluid" alt="">
           </div>
         </div>
-        <div class="row counters">
-
-          <div class="col-lg-4 col-4 text-center">
-            <span data-toggle="counter-up">31</span>
-            <p>Clients</p>
-          </div>
-
-          <div class="col-lg-4 col-4 text-center">
-            <span data-toggle="counter-up">45</span>
-            <p>Projects</p>
-          </div>
-
-
-          <div class="col-lg-4 col-4 text-center">
-            <span data-toggle="counter-up">28</span>
-            <p>Engineers</p>
-          </div>
-
-        </div>
 
 
       </div>
@@ -180,7 +179,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3 class="">Portfolio</h3>
+          <h3 class="">Featured Projects</h3>
         </header>
         <h4 class="h4"> Our Latest Project</h4>
         <p class="portfolio-highlight">
@@ -188,8 +187,7 @@
           features designed to
           facilitate streamlined, on-the-go banking — available on iOS and Android.
         </p>
-        <button class="btn ph-btn" type="button" data-toggle="collapse" data-target="#collapseExample"
-          aria-expanded="false" aria-controls="collapseExample">
+        <button class="btn ph-btn" type="button" data-toggle="modal" data-target="#introModal">
           See What We Built
           <i class="fas fa-play-circle fa-lg"></i>
         </button>
@@ -253,14 +251,7 @@
                         <div class="carousel-item">
                           <img src="img/portfolio/samba/sup5.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item">
-                          <div class="embed-responsive embed-responsive-16by9">
-                            <video width="320" height="240" controls>
-                              <source src="video/VIDEO-2020-01-02-18-35-45.mp4" class="embed-responsive-item auto"
-                                type="video/mp4">
-                            </video>
-                          </div>
-                        </div>
+
                       </div>
                       <a class="carousel-control-prev carousel-vid" href="#sambaControls" role="button"
                         data-slide="prev">
