new portfolio testing

--- a/index.html
+++ b/index.html
@@ -178,44 +178,14 @@
     <section id="portfolio" class="">
       <div class="container">
 
-        <header class="section-header">
-          <h3 class="">Featured Projects</h3>
+        <header class="section-header pb-5">
+          <h3 class="pb-5 pt-3">Featured Projects</h3>
         </header>
-        <h4 class="h4"> Our Latest Project</h4>
-        <p class="portfolio-highlight">
-          We developed a singular application for Samba Bank customers and non-customers alike, with an array of
-          features designed to
-          facilitate streamlined, on-the-go banking — available on iOS and Android.
-        </p>
-        <button class="btn ph-btn" type="button" data-toggle="modal" data-target="#introModal">
-          See What We Built
-          <i class="fas fa-play-circle fa-lg"></i>
-        </button>
-        <div class="collapse" id="collapseExample">
-          <div class="embed-responsive embed-responsive-16by9 p-5">
-            <video width="320" height="240" controls>
-              <source src="video/VIDEO-2020-01-02-18-35-45.mp4" class="embed-responsive-item auto" type="video/mp4">
-            </video>
-          </div>
-        </div>
-
-
-
-        <div class="row">
-          <div class="col-lg-12">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-          </div>
-        </div>
-
 
         <div class="row portfolio-container" style="">
 
           <!--Samba Bank -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <a class="" data-toggle="modal" data-target="#samba">
               <div class="portfolio-wrap">
                 <img src="img/portfolio/samba/title.jpeg" class="img-fluid" alt="">
@@ -290,7 +260,7 @@
           </div>
 
           <!--NBP -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.1s">
             <a class="" data-toggle="modal" data-target="#nbp">
               <div class="portfolio-wrap">
                 <img src="img/portfolio/nbp/title.jpg" class="img-fluid" alt="">
@@ -353,7 +323,7 @@
           </div>
 
           <!--Telenor -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.1s">
+          <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.3s">
             <a class="" data-toggle="modal" data-target="#telenor">
               <div class="portfolio-wrap">
                 <img src="img/portfolio/telenor/title.jpeg" class="img-fluid" alt="">
@@ -406,7 +376,7 @@
 
 
           <!--Chat Bot -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.3s">
+          <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.1s">
             <a class="" data-toggle="modal" data-target="#chat">
               <div class="portfolio-wrap">
                 <img src="img/portfolio/chat/title.jpg" class="img-fluid" alt="">
@@ -458,7 +428,7 @@
           </div>
 
           <!--Luxury Adv -->
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web">
+          <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn filter-web">
             <a class="" data-toggle="modal" data-target="#luxuryadv">
               <div class="portfolio-wrap">
                 <img src="img/portfolio/luxuryadv/title.jpeg" class="img-fluid" alt="">
