--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
 
       <div class="intro-info">
         <h2 class="" style="font-size: 25px;">SEED<span style="font-weight: 400">CODE</h2>
-        <h2 class="">Software For Innovators By Innovators</h2>
-        <p class="">We build secure, scalable software products that enable financial inclusivity and improve lives</p>
+        <h2 class="">Innovate to Improve
+        </h2>
+        <p class="">We help business improve lives, create better customer experiences, and grow the bottom line.
+
+
+
+        </p>
         <div class="main-buttons">
 
           <button class="btn ph-btn" type="button" data-toggle="modal" data-target="#introModal">
