new portfolio mobile

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
       Portfolio Section
     ============================-->
   <section id="portfolio" class="">
-    <div class="container pt-5">
+    <div class="container">
 
 
       <div class="row portfolio-container pt-5" style="">
 
         <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn">
-          <header class="section-header p-3">
+          <header class="section-header py-3">
             <i class="fas fa-seedling fa-4x"></i>
             <h3 style="text-align: left;" class="pb-5">Automating Businesses Globally</h3>
           </header>
@@ -198,6 +198,14 @@
               </div>
             </div>
           </a>
+          <div class="portfolio-info-2">
+            <span>Samba Bank</span>
+            <p> We developed a singular application for Samba Bank customers and non-customers alike, with an
+              array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
+              Android. </p>
+            <a class="lm-btn" data-toggle="modal" data-target="#samba">Learn More </i></a>
+          </div>
+
         </div>
         <div class="modal fade" id="samba" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -270,6 +278,12 @@
               </div>
             </div>
           </a>
+          <div class="portfolio-info-2">
+            <span>National Bank of Pakistan</span>
+            <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
+              increased Customer Satisfaction.</p>
+            <a class="lm-btn" data-toggle="modal" data-target="#nbp">Learn More </i></a>
+          </div>
         </div>
         <div class="modal fade" id="nbp" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -333,6 +347,12 @@
               </div>
             </div>
           </a>
+          <div class="portfolio-info-2">
+            <span>Telenor</span>
+            <p> A user-experience focused app to drive customer relationships for Pakistan's Telenor Franchise —
+              account management, geotags, servicing, referalls and more. </p>
+            <a class="lm-btn" data-toggle="modal" data-target="#telenor">Learn More </i></a>
+          </div>
         </div>
         <div class="modal fade" id="telenor" tabindex="-1" role="dialog" aria-labelledby="telenor" aria-hidden="true">
           <div class="modal-dialog tele" role="document">
@@ -387,6 +407,13 @@
               </div>
             </div>
           </a>
+          <div class="portfolio-info-2">
+            <span>AI Chat Bot</span>
+            <p> Our self learning chatbox solution integrates with your CRM and other platforms to deliver an
+              engaged and personal customer experience. It's conversational maturity and autonmous
+              reasoning help it perform complex logic without any human intervention.</p>
+            <a class="lm-btn" data-toggle="modal" data-target="#chat">Learn More </i></a>
+          </div>
         </div>
         <div class="modal fade" id="chat" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -438,6 +465,12 @@
               </div>
             </div>
           </a>
+          <div class="portfolio-info-2">
+            <span>Luxury Adventures</span>
+            <p>A complete e-commerce platform — easy admin content mangement, integrated email marketing &
+              blog, SEO, analytics tools & much more. </p>
+            <a class="lm-btn" data-toggle="modal" data-target="#luxuryadv">Learn More </i></a>
+          </div>
         </div>
         <div class="modal fade" id="luxuryadv" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
           <div class="modal-dialog" role="document">
