lots of updates

--- a/careers.html
+++ b/careers.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SeedCode - Software Development, Mobile, DevOps</title>
+    <title>SeedCode - Software for Innovation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Software Development, Mobile, DevOps" name="keywords">
-    <meta content="Software Development, Mobile, DevOps" name="description">
+    <meta content="Software for Innovation" name="keywords">
+    <meta content="Software for Innovation" name="description">
 
     <!-- Favicons -->
     <!-- <link href="img/favicon.png" rel="icon"> -->
