--- a/index.html
+++ b/index.html
@@ -62,32 +62,55 @@
   <!--==========================
     Intro Section
   ============================-->
-  <section id="intro" class="clearfix">
-    <div class="container">
+  <section id="intro" class=" container clearfix">
+    <div class="intro-info">
+      <h2 class="" style="font-size: 25px;">SEED<span style="font-weight: 400">CODE</h2>
+      <h2 class="">Innovate to Improve
+      </h2>
+      <p class="">We help business improve lives, create better customer experiences, and grow the bottom line.
 
-      <div class="intro-info">
-        <h2 class="" style="font-size: 25px;">SEED<span style="font-weight: 400">CODE</h2>
-        <h2 class="">Innovate to Improve
-        </h2>
-        <p class="">We help business improve lives, create better customer experiences, and grow the bottom line.
+      </p>
+      <div class="main-buttons">
+        <button class="btn ph-btn" type="button" data-toggle="modal" data-target="#introModal">
+          See What We Built
+          <i class="fas fa-play-circle fa-lg"></i>
+        </button>
 
+        <a href="mailto:rabeel@seedcode.io" class=" btn get-started">
+          Let's Discuss Your Project
+          <i class="far fa-comments fa-lg"></i>
+        </a>
+      </div>
 
+    </div>
 
-        </p>
-        <div class="main-buttons">
-
-          <button class="btn ph-btn" type="button" data-toggle="modal" data-target="#introModal">
-            See What We Built
-            <i class="fas fa-play-circle fa-lg"></i>
-          </button>
-
-          <a href="mailto:rabeel@seedcode.io" class=" btn get-started">
-            Let's Discuss Your Project
-            <i class="far fa-comments fa-lg"></i>
-          </a>
+    <div class="partners container-fluid">
+      <h3>Great Partners Make Us Better
+      </h3>
+      <p>From Startups to Enterprises, businesses across the globe trust SeedCode to ideate, create, and design
+        innovative technology products and business automation solutions.</p>
+      <div class="row align-items-center">
+        <div class="col-4 col-lg-2 mb-2">
+          <img src="/img/collab/2.png" class="img-fluid">
+        </div>
+        <div class="col-4 col-lg-2 mb-2">
+          <img src="/img/collab/5.png" class="img-fluid">
+        </div>
+        <div class="col-4 col-lg-2 mb-2">
+          <img src="/img/collab/3.png" class="img-fluid">
+        </div>
+        <div class="col-4 col-lg-2 mb-2">
+          <img src="/img/collab/7.png" class="img-fluid">
+        </div>
+        <div class="col-4 col-lg-2 mb-2">
+          <img src="/img/collab/6.png" class="img-fluid">
+        </div>
+        <div class="col-4 col-lg-2 mb-2">
+          <img src="/img/collab/4.png" class="img-fluid">
         </div>
 
       </div>
+    </div>
   </section><!-- #intro -->
   <div class="modal fade" id="introModal" tabindex="-1" role="dialog" aria-labelledby="introModalLabel"
     aria-hidden="true">
@@ -192,17 +215,15 @@
               <img src="img/portfolio/samba/title.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <span>Samba Bank</span>
-                <p> We developed a singular application for Samba Bank customers and non-customers alike, with an
-                  array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
-                  Android. </p>
+                <p> Building an integrated mobile application for Middle East’s Samba Bank using our AI Chatbot, Cyber
+                  Security, and payment solution. </p>
               </div>
             </div>
           </a>
           <div class="portfolio-info-2">
             <span>Samba Bank</span>
-            <p> We developed a singular application for Samba Bank customers and non-customers alike, with an
-              array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
-              Android. </p>
+            <p> Building an integrated mobile application for Middle East’s Samba Bank using our AI Chatbot, Cyber
+              Security, and payment solution. </p>
             <a class="lm-btn" data-toggle="modal" data-target="#samba">Learn More </i></a>
           </div>
 
@@ -250,9 +271,8 @@
                     <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                   </div>
                 </div>
-                <p>We developed a singular application for Samba Bank customers and non-customers alike, with an
-                  array of features designed to facilitate streamlined, on-the-go banking — available on iOS and
-                  Android. </p>
+                <p>Building an integrated mobile application for Middle East’s Samba Bank using our AI Chatbot, Cyber
+                  Security, and payment solution. </p>
                 <p>The app features account details, fund transfers, card management, bill payments, friend
                   mangement,
                   multiple layers
@@ -273,15 +293,17 @@
               <img src="img/portfolio/nbp/title.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <span>National Bank of Pakistan</span>
-                <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
-                  increased Customer Satisfaction.</p>
+                <p> Helping Pakistan's largest bank realize its vision for IoT-enabled ATMs, digitalization of its
+                  documents, fleet management & vehicle tracking systems, mail management system, and a ticket
+                  management portal to support it's 1600+ branch network.</p>
               </div>
             </div>
           </a>
           <div class="portfolio-info-2">
             <span>National Bank of Pakistan</span>
-            <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
-              increased Customer Satisfaction.</p>
+            <p> Helping Pakistan's largest bank realize its vision for IoT-enabled ATMs, digitalization of its
+              documents, fleet management & vehicle tracking systems, mail management system, and a ticket management
+              portal to support it's 1600+ branch network.</p>
             <a class="lm-btn" data-toggle="modal" data-target="#nbp">Learn More </i></a>
           </div>
         </div>
@@ -319,12 +341,9 @@
                     <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                   </div>
                 </div>
-                <p> An IOT Based Solution to remotely monitor, track & optimize the availability of ATM services for
-                  increased Customer Satisfaction.</p>
-                <p> The app features real-time monitoring, outage notifications, audit reports, remote control and
-                  optimized issue identification. Throughput resulted in PKR 250,000 (USD 1,600) in direct savings
-                  per
-                  month, per site.
+                <p> Helping Pakistan's largest bank realize its vision for IoT-enabled ATMs, digitalization of its
+                  documents, fleet management & vehicle tracking systems, mail management system, and a ticket
+                  management portal to support it's 1600+ branch network.
                 </p>
                 <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                     class="fas fa-laptop-code"></i></i></a>
@@ -342,15 +361,15 @@
               <img src="img/portfolio/telenor/title.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <span>Telenor</span>
-                <p> A user-experience focused app to drive customer relationships for Pakistan's Telenor Franchise —
-                  account management, geotags, servicing, referalls and more. </p>
+                <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
+                  information in real time </p>
               </div>
             </div>
           </a>
           <div class="portfolio-info-2">
             <span>Telenor</span>
-            <p> A user-experience focused app to drive customer relationships for Pakistan's Telenor Franchise —
-              account management, geotags, servicing, referalls and more. </p>
+            <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
+              information in real time </p>
             <a class="lm-btn" data-toggle="modal" data-target="#telenor">Learn More </i></a>
           </div>
         </div>
@@ -383,8 +402,8 @@
                     <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                   </div>
                 </div>
-                <p> A user-experience focused app to drive consumer relations for Pakistan's Telenor Franchise —
-                  account management, geotags, servicing, referalls and more. </p>
+                <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
+                  information in real time </p>
                 <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                     class="fas fa-laptop-code"></i></i></a>
               </div>
