--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
       Portfolio Section
     ============================-->
   <section id="portfolio" class="">
-    <div class="container">
+    <div class="container pt-5">
 
 
-      <div class="row portfolio-container pt-5" style="">
+      <div class="row portfolio-container" style="">
 
         <div class="col-lg-6 col-md-6 portfolio-item wow fadeIn">
-          <header class="section-header py-3">
+          <header class="section-header pb-5">
             <i class="fas fa-seedling fa-4x"></i>
-            <h3 style="text-align: left;" class="pb-5">Automating Businesses Globally</h3>
+            <h3 style="text-align: left;" class="pb-4">Automating Businesses Globally</h3>
           </header>
         </div>
 
@@ -362,14 +362,14 @@
               <div class="portfolio-info">
                 <span>Telenor</span>
                 <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
-                  information in real time </p>
+                  information in real time. </p>
               </div>
             </div>
           </a>
           <div class="portfolio-info-2">
             <span>Telenor</span>
             <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
-              information in real time </p>
+              information in real time. </p>
             <a class="lm-btn" data-toggle="modal" data-target="#telenor">Learn More </i></a>
           </div>
         </div>
@@ -403,7 +403,7 @@
                   </div>
                 </div>
                 <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
-                  information in real time </p>
+                  information in real time. </p>
                 <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                     class="fas fa-laptop-code"></i></i></a>
               </div>
