--- a/index.html
+++ b/index.html
@@ -361,14 +361,16 @@
               <img src="img/portfolio/telenor/title.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <span>Telenor</span>
-                <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
+                <p> Helping a 4G mobile service provider with 45 million subscribers build a platform to capture field
+                  sales and service
                   information in real time. </p>
               </div>
             </div>
           </a>
           <div class="portfolio-info-2">
             <span>Telenor</span>
-            <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
+            <p> Helping a 4G mobile service provider with 45 million subscribers build a platform to capture field sales
+              and service
               information in real time. </p>
             <a class="lm-btn" data-toggle="modal" data-target="#telenor">Learn More </i></a>
           </div>
@@ -402,7 +404,8 @@
                     <a href="" class="btn preview-btn" data-dismiss="modal"><i class="fas fa-times fa-lg"></i></a>
                   </div>
                 </div>
-                <p> Helping a 4G mobile with 45 million subscribers build a platform to capture field sales and service
+                <p> Helping a 4G mobile service provider with 45 million subscribers build a platform to capture field
+                  sales and service
                   information in real time. </p>
                 <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                     class="fas fa-laptop-code"></i></i></a>
