--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h2 class="" style="font-size: 25px;">SEED<span style="font-weight: 400">CODE</h2>
       <h2 class="">Innovate to Improve
       </h2>
-      <p class="">We help business improve lives, create better customer experiences, and grow the bottom line.
+      <p class="">We help businesses improve lives, create better customer experiences, and grow their bottom line.
 
       </p>
       <div class="main-buttons">
@@ -295,7 +295,7 @@
                 <span>National Bank of Pakistan</span>
                 <p> Helping Pakistan's largest bank realize its vision for IoT-enabled ATMs, digitalization of its
                   documents, fleet management & vehicle tracking systems, mail management system, and a ticket
-                  management portal to support it's 1600+ branch network.</p>
+                  management portal to support its 1600+ branch network.</p>
               </div>
             </div>
           </a>
@@ -303,7 +303,7 @@
             <span>National Bank of Pakistan</span>
             <p> Helping Pakistan's largest bank realize its vision for IoT-enabled ATMs, digitalization of its
               documents, fleet management & vehicle tracking systems, mail management system, and a ticket management
-              portal to support it's 1600+ branch network.</p>
+              portal to support its 1600+ branch network.</p>
             <a class="lm-btn" data-toggle="modal" data-target="#nbp">Learn More </i></a>
           </div>
         </div>
@@ -343,7 +343,7 @@
                 </div>
                 <p> Helping Pakistan's largest bank realize its vision for IoT-enabled ATMs, digitalization of its
                   documents, fleet management & vehicle tracking systems, mail management system, and a ticket
-                  management portal to support it's 1600+ branch network.
+                  management portal to support its 1600+ branch network.
                 </p>
                 <a href="mailto:rabeel@seedcode.io" target="_blank" class="preview-btn">Request Demo <i
                     class="fas fa-laptop-code"></i></i></a>
